modals: remove borders from items in status area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -653,6 +653,8 @@
                 /// Reset the circle icon.
                 svg[width][height] path { v: t fg }
             }
+            /// Remove borders from list items.
+            ._2UaNq { border-top: none }
             /// Reply to the status.
             /.QRsOy { c: 0 0 bg }
             /// Feat -> Fullscreen mode.
