left: fix colors when adding group participants

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -926,6 +926,12 @@
                 &._30Q1W { .3H4MS:not(#z) { c: cm }}
                 /// Settings -> Reset first list item.
                 &._3fAgu { border-top: none i }
+                /// Left -> Add group participants.
+                &._27Ppf {
+                    c: 0 0 bd;
+                    /// Default avatar background.
+                    [style *= 'height: 26px'] { c: 0 0 bd }
+                }
             }
             /// Settings -> Options.
             ._26JG5 {
