left: fix char limit and badge hover state

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -604,7 +604,7 @@
             /.fwByR { c: ac }
         }
         /// Settings -> Help.
-        ._1wt6r, /.bHCVK { c: cm }
+        ._1wt6r, /._3Yulp, /.bHCVK { c: cm }
         ._3hnO5 { c: 0 ac }
         ._1T8rb { c: ac 0 t }
         /// Left -> Turn on desktop notifications.
@@ -916,7 +916,7 @@
                 border-top: 1px solid bd;
                 c: 0 0 t;
                 &::after { content: none i }
-                &:hover:not(#z):not(#x) { c: 0 0 #55555510 }
+                &:hover:not(#z):not(._27Ppf) { c: 0 0 #55555510 }
                 [style *= 'height: 82px'] { c: 0 0 t }
                 ._2WP9Q { border-top: none i }
                 /// Nick/info.
