chat: be more specific about image timestamp
It was visible when using custom colors for message bubbles.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1337,7 +1337,7 @@
             /// Search -> Selected message.
             &.velocity-animating { opacity: 0.4 }
             /// Images -> Timestamp.
-            div[style *= 'width'][style *= 'height'] + div[class] {
+            div[style *= 'width'][style *= 'height'] + .iVt71 {
                 padding: 2px 5px;
                 rad: 7.5px;
                 c: 0 0 hl;
