global: fix sliders for built-in media player

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -362,6 +362,17 @@
 
         /// Group invite link.
         #group-invite-link-anchor { c: ac }
+
+        /// Global -> Media player.
+        /.OZVc4 {
+            /// Reset sliders.
+            ._3N5w5 {
+                &::-webkit-slider-runnable-track { c: 0 0 t }
+                &::-moz-range { &-progress, &-track { c: 0 0 t }}
+            }
+            /// Progress bar.
+            ._2bTRm ._2ZXtj { c: 0 0 ac }
+        }
     }
 
     #app > div {
