meta: add new updateURL link

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -4,6 +4,7 @@
 @namespace    github.com/vednoc/dark-whatsapp
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
+@updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @version      1.9.9
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
