--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      1.9.9
+@version      2.0.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -138,9 +138,9 @@
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
-        --version   : 'Dark-WhatsApp [Alpha] v1.9.9';
-        --message   : 'WIP v2. ';
-        --changes   : 'See the PR at: https://github.com/vednoc/dark-whatsapp/pull/38';
+        --version   : 'Dark-WhatsApp v2.0.0';
+        --message   : 'The v2 is finally here! 🎉 🥳 Read more: ';
+        --changes   : 'https://vednoc.me/blog/the-new-dark-whatsapp';
     }
 
     // Use stylus-lang variables with CSS variables.
