--- a/wa.user.styl
+++ b/wa.user.styl
@@ -881,6 +881,8 @@
                     }
                     /// Body.
                     > div:last-child { c: cm }
+                    /// Override; all msg content should use lighter color.
+                    strong { c: cm }
                 }
                 /// Unread indicators.
                 /.P6z4j { c: white 0 ac }
