--- a/wa.user.styl
+++ b/wa.user.styl
@@ -22,7 +22,7 @@
 @var checkbox chat_b_c   'Enable blurred contacts' 0
 @var checkbox chat_b_img 'Enable blurred images/videos' 0
 
-@var checkbox chat_msg_t 'Hide message tails' 0
+@var checkbox chat_msg_t 'Enable message tails' 1
 
 @var checkbox chat_left  'Left message bubble position' 0
 @var checkbox chat_right 'Right message bubble position' 0
@@ -1335,7 +1335,7 @@
                 background: none !important;
             }
             /// Feat -> Message tails.
-            if ( chat_msg_t == 1 ) {
+            if ( chat_msg_t == 0 ) {
                 .tail {
                     > div { rad: 7.5px i }
                     .tail-container { display: none }
