--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1628,9 +1628,9 @@
                 c: 0 0 hl;
                 div[role] { c: 0 0 hl }
                 /.quoted-mention { c: cm }
-                /// Add border around wrapper.
-                /._1SsXF, ._3LVMN {
-                    rad: 0 7.5px 7.5px 0;
+                /// Add border around replies.
+                /._1SsXF, ._2HTIU {
+                    rad: 4px i;
                     box-shadow: inset 0 0 0 1px bd;
                 }
             }
