--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1428,11 +1428,11 @@
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
                 &._38wik._2Nkc4 { background: linear-gradient(270deg, t, left 80%) i }
-                /// Fix context menu for messages with files.
-                /._15CAo._2Nkc4 { background: linear-gradient(90deg, t, left 80%) i }
             }
             /// Context menu -> Forwarded messages.
             > div > span:nth-last-child(2) > div[style] {
+                /// Fix context menu for messages with files/links.
+                &._15CAo._2Nkc4 { background: linear-gradient(90deg, t, left 80%) i }
                 &._15CAo._3EQsG {
                     height: 23px;
                     background: linear-gradient(90deg, t, left 80%) i;
@@ -1468,11 +1468,11 @@
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
                 &._38wik._3EQsG { background: linear-gradient(270deg, t, right 80%) i }
-                /// Fix context menu for messages with files.
-                /._15CAo._2Nkc4 { background: linear-gradient(90deg, t, right 80%) i }
             }
             /// Context menu -> Forwarded messages.
             > div > span:nth-last-child(2) > div[style] {
+                /// Fix context menu for messages with files/links.
+                &._15CAo._2Nkc4 { background: linear-gradient(90deg, t, right 80%) i }
                 &._15CAo._3EQsG {
                     height: 23px;
                     background: linear-gradient(90deg, t, right 80%) i;
