--- a/wa.user.styl
+++ b/wa.user.styl
@@ -22,7 +22,11 @@
 @var checkbox chat_b_c   'Enable blurred contacts' 0
 @var checkbox chat_b_img 'Enable blurred images/videos' 0
 
-@var checkbox chat_msg_t 'Enable message tails' 1
+@var select chat_msg_t 'Message tails style' {
+    'Default *': 'default ',
+    'Minimal  ': 'minimal ',
+    'Rounded  ': 'rounded ',
+}
 
 @var select chat_left 'Left message bubble position' {
     'Left side  *': 'start ',
@@ -1337,11 +1341,13 @@
                 background: none !important;
             }
             /// Feat -> Message tails.
-            if ( chat_msg_t == 0 ) {
+            if ( chat_msg_t == 'rounded' ) {
                 .tail {
                     > div { rad: 7.5px i }
                     .tail-container { display: none }
                 }
+            } else if ( chat_msg_t == 'minimal' ) {
+                .tail .tail-container { display: none }
             }
             /// Date.
             [data-pre-plain-text] + div * { c: cm }
