--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1586,10 +1586,18 @@
                 c: 0 0 hl;
                 box-shadow: inset 0 1px bd, inset 0 -1px bd;
                 div[style *= 'background'] { c: 0 0 ac }
-                > :not(._2wn58) { c: cm }
-                ._2wn58 { c: fg }
-                /// Stickers -> Active nav.
-                .Orl3a { c: 0 0 ac }
+                > :not(._2wn58) {
+                    c: cm;
+                    /// Inactive tabs.
+                    &:not(:hover) path { fill: cm }
+                    /// Active tabs.
+                    &:hover, ../ ._2wn58 { c: fg }
+                }
+                /// Active menu.
+                .Orl3a {
+                    height: 1px;
+                    c: 0 0 ac;
+                }
             }
             /// Body.
             .QChXd, ._20KNO, .RxbUw {
