--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1128,6 +1128,8 @@
             c: 0 0 hl;
             box-shadow: inset 0 -1px bd;
             div { c: fg }
+            /// Left -> Fix starred messages menu. @upstream
+            /._3jHKU { z-index: 9 i }
         }
         /// Media/Links/Docs -> Selected header.
         .yrOIH {
