--- a/wa.user.styl
+++ b/wa.user.styl
@@ -881,12 +881,12 @@
         ._2HS9r { background-color: hl }
             
         /div[class *= 'ZP8RM'] {
-            border-bottom: 1px solid bd;
+            border-bottom: 1px solid bg;
             c: 0 0 t;
-            &._19OGD { c: 0 0 bd }
+            &._19OGD { c: 0 0 bg }
             &::after { content: none }
             >  div + label {
-                c: 0 0 bd;
+                c: 0 0 bg;
                 input { c: fg 0 t }
                 &:focus-within { c: 0 0 t; }
             }
