--- a/wa.user.styl
+++ b/wa.user.styl
@@ -921,6 +921,8 @@
                 /// Unread indicators.
                 /.P6z4j { c: white 0 ac }
             }
+            /// Remove background glitch of an empty element.
+            ._2xINO { height: 0 }
         }
         /// Search contacts/messages.
         .r7sRK {
