--- a/wa.user.styl
+++ b/wa.user.styl
@@ -741,7 +741,7 @@
                 transition: 0.15s ease;
             }
             /// Animate-ish.
-            &:hover > svg > path {
+            &:hover:not([data-icon='muted'):not([data-icon='pinned']) > svg > path {
                 opacity: 1;
                 fill-opacity: 0.9 i;
             }
