global: added more non-functional icons
sticker, contact, image, video, gif and document

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -741,7 +741,7 @@
                 transition: 0.15s ease;
             }
             /// Animate-ish.
-            &:hover:not([data-icon='muted'):not([data-icon='pinned']) > svg > path {
+            &:hover:not([data-icon='muted']):not([data-icon='pinned']):not([data-icon='status-sticker']):not([data-icon='status-vcard']):not([data-icon='status-image']):not([data-icon='status-video']):not([data-icon='status-gif']):not([data-icon='status-document']) > svg > path {
                 opacity: 1;
                 fill-opacity: 0.9 i;
             }
