global: added status check icons
status: check, double-check and double-check acknowledged

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -755,7 +755,11 @@
             &[data-icon='status-sticker'],
             &[data-icon='status-document'],
             &[data-icon='recalled-in'],
-            &[data-icon='recalled-out'] {
+            &[data-icon='recalled-out'],
+            &[data-icon='status-check'],
+            &[data-icon='status-dblcheck'],
+            &[data-icon='status-dblcheck-ack'],
+            {
                 > svg > path {
                     fill-opacity: 0.25 i;
                 }
