--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1275,6 +1275,12 @@
                     [data-icon = 'x'] { opacity: 0.55 i }
                     &:disabled path { opacity: 0.55 i }
                     path { opacity: 1 i }
+                    
+                    //Animate-ish
+                    &:hover > span > svg > path { 
+                        opacity: 1 i;
+                        fill-opacity: 0.9 i;
+                    }
                 }
             }
             /// Forwarded message.
